First unit tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,4 @@ services:
     restart: always
     volumes:
       - ./:/home/node/node_filesystem
-    command: "yarn test"
+    command: "yarn test:watch"
