--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "scripts": {
     "build": "tsc",
     "test": "nyc mocha -A --opts ./mocha.opts --require ts-node/register -r tsconfig-paths/register",
-    "test:watch": "nodemon --exec yarn test",
-    "npm:publish": "yarn build && cp package.json dist/ && cd dist/ && npm publish"
+    "test:clear": "clear &&  yarn test",
+    "test:watch": "nodemon --exec yarn test:clear",
+    "npm:publish": "yarn build && cp package.json dist/ && cd dist/ && npm publish",
+    "coverage": "cd coverage && python -m SimpleHTTPServer 8182"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "fs-extra": "^4.0.3",
     "ltrim": "^1.0.0",
+    "recursive-readdir": "^2.2.1",
     "rtrim": "^1.0.0",
     "s3": "^4.4.0",
     "uid": "^0.0.2"
@@ -27,6 +32,7 @@
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1",
     "nyc": "^11.3.0",
+    "reflect-metadata": "^0.1.10",
     "ts-node": "^3.3.0",
     "tsconfig-paths": "^2.4.0",
     "tslint": "^5.8.0",
