--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     working_dir: /home/node/node_filesystem
     environment:
       - NODE_ENV=development
+      - TERM=xterm
     restart: always
     volumes:
       - ./:/home/node/node_filesystem
