--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "node-filesystem",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A node filesystem manager",
   "main": "index.js",
   "repository": "git@github.com:beautybrands/node-queue-manager.git",
   "author": "Piero Giusti <pierophp@gmail.com>",
   "license": "MIT",
   "keywords": ["node", "file", "filesystem", "s3", "flysystem"],
+  "engines": {
+    "node": ">=8.0"
+  },
   "scripts": {
     "build": "tsc",
     "test":
