--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-filesystem",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "A node filesystem manager",
   "main": "index.js",
   "repository": "git@github.com:beautybrands/node-filesystem.git",
@@ -25,6 +25,7 @@
     "fs-extra": "^4.0.3",
     "lodash": "^4.17.4",
     "ltrim": "^1.0.0",
+    "mime": "^2.3.1",
     "node-dir": "^0.1.17",
     "rtrim": "^1.0.0",
     "s3": "^4.4.0"
