--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "node-filesystem",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "A node filesystem manager",
   "main": "index.js",
   "repository": "git@github.com:beautybrands/node-filesystem.git",
   "author": "Piero Giusti <pierophp@gmail.com>",
   "license": "MIT",
-  "keywords": ["node", "file", "filesystem", "s3", "flysystem"],
+  "keywords": [
+    "node",
+    "file",
+    "filesystem",
+    "s3",
+    "flysystem"
+  ],
   "engines": {
     "node": ">=8.0"
   },
   "scripts": {
     "build": "tsc",
-    "test":
-      "nyc mocha -A --opts ./mocha.opts --require ts-node/register -r tsconfig-paths/register",
+    "test": "nyc mocha -A --opts ./mocha.opts --require ts-node/register -r tsconfig-paths/register",
     "test:clear": "clear &&  yarn test",
     "test:watch": "nodemon --exec yarn test:clear",
-    "npm:publish":
-      "yarn build && cp package.json dist/ && cd dist/ && npm publish",
+    "npm:publish": "yarn build && cp package.json dist/ && cd dist/ && npm publish",
     "coverage": "cd coverage && python -m SimpleHTTPServer 8182"
   },
   "dependencies": {
@@ -47,10 +51,21 @@
     "typescript": "^2.6.1"
   },
   "nyc": {
-    "include": ["src/*.ts", "src/**/*.ts"],
-    "exclude": ["docker"],
-    "extension": [".ts"],
-    "reporter": ["html", "lcovonly", "text-summary"],
+    "include": [
+      "src/*.ts",
+      "src/**/*.ts"
+    ],
+    "exclude": [
+      "docker"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "reporter": [
+      "html",
+      "lcovonly",
+      "text-summary"
+    ],
     "all": true
   }
 }
