Google Cloud Storage

--- a/env.js.example
+++ b/env.js.example
@@ -3,4 +3,6 @@ module.exports = {
   aws_access_key_id: '',
   aws_secret_access_key: '',
   aws_s3_bucket: '',
+  google_cloud_storage_project_id: '',
+  google_cloud_storage_bucket: '',
 };
