--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-filesystem",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "A node filesystem manager",
   "main": "index.js",
   "repository": "git@github.com:beautybrands/node-filesystem.git",
@@ -33,7 +33,7 @@
     "mime": "^2.3.1",
     "node-dir": "^0.1.17",
     "rtrim": "^1.0.0",
-    "s3": "^4.4.0"
+    "s3-client": "^4.4.0"
   },
   "devDependencies": {
     "@types/bull": "^3.3.0",
