--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/mocha": "^2.2.44",
     "@types/node": "^14.18.22",
     "chai": "^4.2.0",
+    "dotenv": "^16.0.1",
     "mocha": "^6.0.2",
     "nodemon": "^1.12.1",
     "nyc": "^11.3.0",
